<?xml version="1.0" encoding="utf-8"?>
<com.mcmouse88.multimodulefeature.core.presentation.views.ResultView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.profile.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_screen_title"
                style="@style/TitleTextView"
                android:layout_marginTop="@dimen/core_theme_medium_space"
                app:layout_constraintVertical_chainStyle="packed"
                android:text="@string/profile_title_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/container_data" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/core_theme_large_space"
                app:layout_constraintTop_toBottomOf="@id/tv_screen_title"
                app:layout_constraintBottom_toTopOf="@id/btn_edit_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" >

                <TextView
                    android:id="@+id/tv_email_hint"
                    style="@style/ProfileHintTextView"
                    android:text="@string/profile_field_email"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_username_hint"
                    style="@style/ProfileHintTextView"
                    android:text="@string/profile_field_username"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintTop_toBottomOf="@id/tv_email_hint" />

                <TextView
                    android:id="@+id/tv_created_at_hint"
                    style="@style/ProfileHintTextView"
                    android:text="@string/profile_field_created_at"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0"
                    app:layout_constraintTop_toBottomOf="@id/tv_username_hint" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="end"
                    app:constraint_referenced_ids="tv_email_hint,tv_username_hint,tv_created_at_hint" />

                <TextView
                    android:id="@+id/tv_email"
                    style="@style/ProfileValueTextView"
                    tools:text="test@test.test"
                    app:layout_constraintStart_toStartOf="@id/barrier_start"
                    app:layout_constraintTop_toTopOf="@id/tv_email_hint" />

                <TextView
                    android:id="@+id/tv_username"
                    style="@style/ProfileValueTextView"
                    tools:text="admin"
                    app:layout_constraintStart_toStartOf="@id/barrier_start"
                    app:layout_constraintTop_toTopOf="@id/tv_created_at_hint" />

                <TextView
                    android:id="@+id/tv_created_at"
                    style="@style/ProfileValueTextView"
                    tools:text="10/10/2010"
                    app:layout_constraintStart_toStartOf="@id/barrier_start"
                    app:layout_constraintTop_toTopOf="@id/tv_created_at_hint" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btn_edit_profile"
                style="@style/GlobalTextInputStyle.Big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/core_theme_large_space"
                android:text="@string/profile_action_edit_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_data"
                app:layout_constraintBottom_toTopOf="@id/btn_logout" />

            <Button
                android:id="@+id/btn_logout"
                style="@style/GlobalTextInputStyle.Secondary.Big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/core_theme_medium_space"
                android:text="@string/profile_action_logout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_edit_profile"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</com.mcmouse88.multimodulefeature.core.presentation.views.ResultView>