<?xml version="1.0" encoding="utf-8"?>
<com.mcmouse88.multimodulefeature.core.presentation.views.ResultView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.edit.EditProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_screen_title"
                style="@style/TitleTextView"
                android:text="@string/profile_edit_profile_description"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/til_username" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/profile_field_username"
                android:layout_marginTop="@dimen/core_theme_large_space"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_screen_title"
                app:layout_constraintBottom_toTopOf="@id/btn_save" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:inputType="text"
                    android:imeOptions="actionDone" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_save"
                style="@style/GlobalTextInputStyle.Big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_action_save"
                android:layout_marginTop="@dimen/core_theme_large_space"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_username"
                app:layout_constraintBottom_toTopOf="@id/btn_cancel" />

            <Button
                android:id="@+id/btn_cancel"
                style="@style/GlobalTextInputStyle.Secondary.Big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_action_cancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_save"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/core_theme_medium_space"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_cancel" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</com.mcmouse88.multimodulefeature.core.presentation.views.ResultView>